--- a/Unicorn AB.css
+++ b/Unicorn AB.css
@@ -2,10 +2,37 @@
     margin-top: 10px;
     margin-left: 10px;
     margin-right: 10px;
-    margin-bottom: 10px
+    margin-bottom: 10px;
+    background-color: GREY;
+}
+
+div.menu {
+    
+    background-color: transparent;
+    border: none;
+    text-align: right;
+    display: inline-block;
+    font-size: 22px;
+    font-family: 'Calibri';
+    position: absolute;
+    right: 0px; 
+    padding-top: 20px;
+    padding-bottom: 0px;
+    padding-left: 10px;
+    padding-right: 10px;
+
 }
 div.header {
-    font-family: Helvetica;
-    font-style: italic;
-    text-align: center
+    
+    font-family: impact;
+    font-size: 32px;
+    text-align: center;
+    color: lightgray;
+    align-items: center;
+
 }
+
+
+
+
+
