--- a/Unicorn AB.css
+++ b/Unicorn AB.css
@@ -3,7 +3,7 @@
     margin-left: 10px;
     margin-right: 10px;
     margin-bottom: 10px;
-    background-color: GREY;
+    background-color: black;
 }
 
 div.menu {
