--- a/Unicorn AB.css
+++ b/Unicorn AB.css
@@ -73,7 +73,7 @@ iframe {
     margin-right: auto;
     display: block;
     border: 6px solid lightgrey;
-    background-color: rgba(138, 0, 157, 0.8);
+    background-color: rgba(112,128,144, 0.9);
     padding: 1%;
 }
 
@@ -91,7 +91,7 @@ iframe {
 }
 
 .underrubrikBg {
-	background-color: rgba(138, 0, 157, 0.8);
+    background-color: rgba(112,128,144, 0.9); /*rgba(138, 0, 157, 0.8);*/
 	opacity: 1;
     margin:auto;
     border-radius: 25px;
@@ -109,14 +109,18 @@ iframe {
 .paragrafer {
     font: 1em "Bookinsanity";
     margin: auto;
-    background-color:#ac00c4;
+    /*background-color: rgba(128,128,128, 0.8);
+    background-color:#ac00c4;*/
 }
 
 .paragrafBg {
     border: 1px solid black;
-    background-color: #ac00c4;
-	opacity: 0.8;
+    background-color: rgba(112,128,144, 0.9);
+    /*background-color: #ac00c4;
+	opacity: 0.8;*/
     padding: 3%;
+    margin-left: 20%;
+    margin-right: 20%;
 }
 
 .row:after {
