--- a/Unicorn AB.css
+++ b/Unicorn AB.css
@@ -19,60 +19,38 @@
 ***                      Meny formatering                            ***
 ***********************************************************************/
 
-div.menu {
-    background-color: black;
-    font-size: 22px;
-    font-family: 'Calibri';
-}
-
 .menulist {
     list-style-type: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: black;
+    background-color: #333;
     position: fixed;
     top: 0;
     width: 100%;
     text-align: center;
-  }
-
-.menulist li {
-    display:inline;
+}
+  
+li {
+display: inline-block;
 }
 
 li a {
-    color:lightgray;
-    font: 1em "Bookinsanity"; 
-    background-color: transparent; 
-    text-decoration: none;
-    display:inline-block;
-    padding: 10px;
+display: block;
+color: white;
+text-align: center;
+padding: 14px 16px;
+text-decoration: none;
 }
 
-li a:hover:not(.active){
-    background-color: #8a009d;
+li a:hover:not(.active) {
+background-color: #111;
 }
 
-li a.active {
-    color: black;
-    background-color: #8a009d;
+.active {
+background-color: #8a009d;
 }
-/*
-.menubg {
-    text-align: center;
-}
-*/
-.bg2 {
-    text-align: center;
-    background: url(https://image.redbull.com/rbcom/010/2015-04-08/1331715804779_2/0100/0/1/inside-esl%E2%80%99s-esports-cinema-invasion.jpg) no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    width: 100%;
-    height: 1000px;
-}
+
 /***********************************************************************
 ***                      Text formatering                            ***
 ***********************************************************************/
