--- a/Unicorn AB.css
+++ b/Unicorn AB.css
@@ -120,7 +120,7 @@ li {
     color: white;
     -webkit-text-stroke-width: 0.3px;
     -webkit-text-stroke-color: black;
-    text-align: center;
+    text-align: left;
 }
 
 ul {
