--- a/Unicorn AB.css
+++ b/Unicorn AB.css
@@ -68,7 +68,7 @@ li a:hover:not(.active) {
     color: white;
     text-align: center;
     margin:auto;
-    margin-bottom: 3%;
+    margin-bottom: 2%;
     -webkit-text-stroke-width: 1px;
     -webkit-text-stroke-color: black;
 }
@@ -80,7 +80,8 @@ li a:hover:not(.active) {
     color: white;
     text-align: left;
     margin:auto;
-    margin-bottom: 4%;
+    margin-bottom: 2%;
+    margin-top: 3%;
     -webkit-text-stroke-width: 1px;
     -webkit-text-stroke-color: black;
 }
